almost finish remind feature without test

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,9 +71,8 @@
             android:name=".remind.ReminderDetailActivity"
             android:excludeFromRecents="true"
             android:launchMode="singleTask"
-            android:taskAffinity="">
-
-        </activity>
+            android:taskAffinity=""></activity>
+        <activity android:name=".remind.AddReminderActivity"></activity>
     </application>
 
 </manifest>
