--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     //如果你想应用能够兼容Android6.0，请添加此依赖(org.apache.http.legacy.jar)
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha4'
     compile 'com.github.shem8:material-login:1.4.0'
     compile 'cn.bmob.android:bmob-sdk:3.5.0'
@@ -38,7 +39,6 @@ dependencies {
     compile 'cn.bmob.android:bmob-im:2.0.5@aar'
     compile 'cn.bmob.android:bmob-sms:1.0.1'
     compile 'cn.bmob.android:http-legacy:1.0'
-    compile 'com.android.support:support-v4:23.4.0'
     compile 'com.github.ViksaaSkool:AwesomeSplash:v1.0.0'
     compile 'com.jenzz:materialpreference:1.3'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
@@ -46,4 +46,5 @@ dependencies {
     compile 'com.github.thepacific:adapter:1.0.5'
     compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
 }
