--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/logo3"
         android:supportsRtl="true"
+        android:name=".CampusApp"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".activity.MainActivity"
