--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.github.thepacific:adapter:1.0.5'
     compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
+    compile 'org.xdty.preference:color-picker:0.0.4'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
 }
