--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,10 +79,12 @@
             android:label="@string/title_activity_classes"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".course.ClassesActivity"
+            android:name=".course.EditClassActivity"
             android:label="@string/title_activity_classes"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".course.AddClassActivity"></activity>
+        <activity android:name=".course.AddClassActivity" />
+        <activity android:name=".activity.EditEventActivity"></activity>
+        <activity android:name=".activity.FeedbackActivity"></activity>
     </application>
 
 </manifest>
