--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,14 +19,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".view.MainActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label=""
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ui.LoginActivityMaterial" />
-        <activity
-            android:name=".ui.SplashActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,13 +30,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.LoginActivityMaterial" />
         <activity
             android:name=".ui.NavAboutActivity"
             android:label="关于" />
-        <activity
-            android:name=".ui.SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.NavProfileActivity"
             android:label="个人资料"
@@ -86,20 +79,19 @@
             android:name=".ui.EventDetailActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".ui.CourseActivity"
-            android:label="@string/title_activity_course"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
             android:name=".view.LoginActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_login"
-            android:theme="@style/FullscreenTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/FullscreenTheme"></activity>
+        <activity
+            android:name=".view.SettingsActivity"
+            android:label="@string/title_activity_settings" />
+        <activity
+            android:name=".view.MarkActivity"
+            android:label="@string/title_activity_mark"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".view.EventAddActivity" />
+        <activity android:name=".view.CourseActivity"></activity>
     </application>
 
 </manifest>
